# python-cli-sample

./: .gitignore  .pylintrc  LICENSE  README.md  build_all.sh  main.py  requirements.txt  samples.py  tox.ini  xxxpyproject.toml  xxxsetup.cfg
.devcontainer/: devcontainer.json
cli/: build.sh  main.py  pyproject.toml  requirements.txt
cli-apps/mycli/: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
cli-apps/mycli/src/cli/: __init__.py  cli.py
cli-apps/mycli/src/cli/commands/: __init__.py  circle_commands.py  text_commands.py
cli-apps/mycli/tests/: test_cli_circle.py
cli/commands/: __init__.py  circle.py  rect.py
cli/mycliapp/: README.md  cli.py  setup.py
cli/mycliapp/commands/: __init__.py  circle.py  rect.py
cli/mycliapp/tests/: test_cli_circle.py  test_cli_rect.py  test_cli_text.py
cli/tests/: test_cli_circle.py  test_cli_rect.py  test_cli_text.py
featurea/: featurea.py
featureb/: featureb.py
