[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycliapp"
version = "0.0.1"
authors = [
    { name = "Oliver Scheer", email = "oliver.scheer@hotmail.de" }
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["CLI", "Packages"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
my-cli-app = "mycliapp.cli:cli"
my-other-cli-app = "mycliapp.cli:another_function"