[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycli"
version = "0.0.1"
authors = [
    { name = "Oliver Scheer", email = "oliver.scheer@hotmail.de" }
]
description = "An example cli application"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    'importlib-metadata; python_version<"3.8"',
]


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src", "external_packages"]  # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
namespaces = false  # true by default

[project.scripts]
mycli = "cli.cli:main"
myothercli = "cli.cli:another_function"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

